Attempt to fix background attachment on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
+  background-attachment: initial;
   @include desktop {
     min-height: 100vh;
     max-width: 100vw;
